--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -3549,6 +3549,65 @@ width: 100%;
           color:white;
           width:100%;
         }
-        /*generate report */
+        td .fa-star{
+          color:rgb(255, 0, 0);
+          font-size: 14px;
+          margin-left: 2px;
+        }
+        /*reviews style */
+
+        .review-title{
+          width: 100%;
+          text-align: center;
+        }
+        .review-title p{
+          font-size: 20px;
+          color: #0095a4;
+          letter-spacing: 2px;
+          text-transform: uppercase;
+        }
+        .reviews-container{
+
+          background-color: #fff;
+          width: 100%;
+          height: auto;
+          padding:20px 10px;
+          box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.2);
+          border-radius:10px;
+          margin-bottom: 10px;
+        }
+        .circle-pro{
+          text-align:center;
+          display: inline-block;
+          position: relative;
+          width: 40px;
+          height: 40px;
+          margin-top:-5px;
+          overflow: hidden;
+          border-radius:50%;
+          cursor:pointer;
+          border:solid  2px #0095a4;
+          /* border: 2px #2E4053 solid;  */
+        }
+        .circle-pro img{
+          width: auto;
+          height: 100%;
+        }
+        .profile-reviews{
+          display: flex;
+        }
+        .profile-reviews > span{
+          margin-left: 7px;
+          margin-top: 5px;
+          color:#0095a4;
+        }
+        .reviews-container > .user-star{
+          
+            color:#0095a4;
+            margin-top: 10px;
+        }
+        .reviews-container > .user-message{
+          margin-top: -10px;
+        }
 
         
